[package]
name = "range2d"
description = "An iterator for traversing a 2D rectangular coordinate space."
authors = ["Markus Mayer <widemeadows@gmail.com>"]
keywords = ["grid", "iterator"]
categories = ["computer-vision", "game-development", "algorithms"]
homepage = "https://github.com/sunsided/range2d"
repository = "https://github.com/sunsided/range2d"
license = "EUPL-1.2"
version = "0.2.0"
edition = "2024"
